// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert Component > Snapshots > matches snapshot for all variants > variant-filled 1`] = `
<div
  aria-live="polite"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-filledInfo MuiAlert-filled css-s25ubi-MuiPaper-root-MuiAlert-root"
  data-testid="alert"
  role="status"
  style="--Paper-shadow: none;"
>
  <div
    class="MuiAlert-icon css-vab54s-MuiAlert-icon"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
  </div>
  <div
    class="MuiAlert-message css-zioonp-MuiAlert-message"
  >
    <div
      class="alert-message"
    >
      <div
        class="alert-content css-qu50wt"
      >
        filled
         Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Component > Snapshots > matches snapshot for all variants > variant-outlined 1`] = `
<div
  aria-live="polite"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-outlinedInfo MuiAlert-outlined css-1tmlh7j-MuiPaper-root-MuiAlert-root"
  data-testid="alert"
  role="status"
  style="--Paper-shadow: none;"
>
  <div
    class="MuiAlert-icon css-vab54s-MuiAlert-icon"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
  </div>
  <div
    class="MuiAlert-message css-zioonp-MuiAlert-message"
  >
    <div
      class="alert-message"
    >
      <div
        class="alert-content css-qu50wt"
      >
        outlined
         Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Component > Snapshots > matches snapshot for all variants > variant-standard 1`] = `
<div
  aria-live="polite"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard css-wx681v-MuiPaper-root-MuiAlert-root"
  data-testid="alert"
  role="status"
  style="--Paper-shadow: none;"
>
  <div
    class="MuiAlert-icon css-vab54s-MuiAlert-icon"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
  </div>
  <div
    class="MuiAlert-message css-zioonp-MuiAlert-message"
  >
    <div
      class="alert-message"
    >
      <div
        class="alert-content css-qu50wt"
      >
        standard
         Alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert Component > Snapshots > matches snapshot for default props 1`] = `
<div
  aria-live="polite"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorInfo MuiAlert-standardInfo MuiAlert-standard css-wx681v-MuiPaper-root-MuiAlert-root"
  data-testid="alert"
  role="status"
  style="--Paper-shadow: none;"
>
  <div
    class="MuiAlert-icon css-vab54s-MuiAlert-icon"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1ckov0h-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
  </div>
  <div
    class="MuiAlert-message css-zioonp-MuiAlert-message"
  >
    <div
      class="alert-message"
    >
      <div
        class="alert-content css-qu50wt"
      >
        Default Alert
      </div>
    </div>
  </div>
</div>
`;
